# pong

./: CMakeLists.txt  README.md
assets/: sprites.xcf
include/: assets.h  config.h  paddles.h  pong.h
src/: CMakeLists.txt  assets.S  main.c  paddles.c  pong.c
